--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "Wataru Inariba <oinari17@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "vue": "^3.0.2"
+    "vue": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.7",
+    "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@vue/compiler-sfc": "^3.0.3",
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
@@ -28,12 +28,12 @@
     "eslint-plugin-vue": "^7.1.0",
     "html-webpack-plugin": "^5.0.0-alpha.14",
     "mini-css-extract-plugin": "^1.3.1",
-    "postcss": "^8.1.9",
+    "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.0",
     "tailwindcss": "^2.0.1",
     "terser-webpack-plugin": "^5.0.3",
-    "vue-loader": "^16.0.0-rc.2",
+    "vue-loader": "^16.0.0",
     "vue-types": "^3.0.1",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
